--- a/index.css
+++ b/index.css
@@ -8,90 +8,116 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  font-family: var(--font-Inter);
+}
+
+ul {
+  list-style: none;
+}
+
 img {
   max-width: 100%;
 }
 
-a {
+a,
+i {
+  color: var(--color-white);
+  text-decoration: none;
+}
+
+p {
   color: var(--color-white);
 }
+
 :root {
   /* color */
   --color-blue: #043873;
-  --color-white: white;
+  --color-white: #ffffff;
   --color-black: black;
   --color-button: #4f9cf9;
   --color-button-login: #ffe492;
   --color-background-img: #c4defd;
 
   /* font-size */
-  --font-family: "Inter", sans-serif;
+  --font-Inter: "Inter", sans-serif;
   --bigger-font-size: 64px;
   --small-font-size: 18px;
 }
 
 /* HEADER */
 .header {
+  position: fixed;
+  width: 100%;
   background-color: var(--color-blue);
+  top: 0;
+  left: 0;
 }
 
 .nav__container,
 .nav__list,
-.nav__button {
+.nav__button,
+.nav__menu,
+.nav__item {
   display: flex;
   align-items: center;
-  justify-content: space-around;
 }
 
 .nav__container {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 2.15rem;
+  padding-bottom: 2.15rem;
+  justify-content: space-between;
+  padding-left: 13.75rem;
+  padding-right: 13.75em;
+  height: 10vh;
 }
 
-.nav__item {
-  width: 100px;
-  list-style: none;
-}
-.nav__button {
-  width: 270px;
-  list-style: none;
+.nav__list {
+  gap: 4.5rem;
 }
 
-.nav__login {
+.nav__item p {
+  margin-right: 1.25rem;
+}
+
+.nav__button-login {
   border-radius: 8px;
   background-color: var(--color-button-login);
-  padding: 10px 15px;
+  padding: 1.15rem 1.25rem;
   color: var(--color-black);
-  margin-right: px;
-  transition: transform 0.2s;
+  margin-left: 4rem;
+  transition: 0.2s;
 }
 
-.nav__login:hover,
-.nav__try:hover {
+.nav__button-try {
+  border-radius: 8px;
+  background-color: var(--color-button);
+  padding: 1.15rem 1.38rem;
+  transition: transform 0.2s;
+  margin-left: 1.5rem;
+}
+
+.nav__button-login:hover,
+.nav__button-try:hover {
   transform: translateY(-0.2rem);
 }
 
-.nav__link,
-.nav__login,
-.nav__try {
-  text-decoration: none;
-}
-.nav__try {
-  border-radius: 8px;
-  background-color: var(--color-button);
-  padding: 10px 15px;
-  transition: transform 0.2s;
+.nav__button-try i {
+  margin-left: 0.94rem;
 }
 
 /* Section 1 */
-.container__section1 {
-  display: flex;
-  justify-content: center;
-  gap: 32px;
+.section1__container {
+  margin-top: 10vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
+  width: 100%;
+  padding-left: 13.75rem;
+  padding-right: 13.75rem;
   background-color: #043873;
   height: 90vh;
-  border: solid var(--color-button) 2px;
+  border-top: solid var(--color-button) 2px;
   background-image: url("./acssets/img/img_background_section1.png");
 }
 
@@ -101,26 +127,27 @@ a {
   font-family: var(--font-family);
   font-size: var(--bigger-font-size);
   font-weight: 700;
-  margin-bottom: 24px;
-  padding-right: 20px;
+  margin-bottom: 1.5rem;
 }
 
 .section1__content {
   color: var(--color-white);
-  padding-bottom: 60px;
   font-family: var(--font-family);
   font-size: var(--small-font-size);
   font-weight: 400;
-  padding-right: 20px;
+  margin-bottom: 3.75rem;
 }
 
 .section1__button {
-  text-decoration: none;
   border-radius: 8px;
   background-color: var(--color-button);
-  padding: 10px 15px;
-  transition: transform 0.2s;
+  padding: 1.25rem 1.6rem 1.25rem 1.25rem;
   font-family: var(--font-family);
+  transition: 0.2s;
+}
+
+.section1__button i {
+  margin-left: 0.94rem;
 }
 
 .section1__button:hover {
@@ -130,15 +157,15 @@ a {
 .section1__img {
   background-color: var(--color-background-img);
   border-radius: 2rem;
-  width: 500px;
-  height: 350px;
+  width: 51.5rem;
+  height: 34.5rem;
   overflow: hidden;
 }
 
 .section1__img img {
   width: 100%;
   height: 100%;
-  transition: 5s;
+  transition: 3s;
 }
 
 .section1__img img:hover {
